# fast

./: .coveragerc  .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.yml  env_tempalte  pyproject.toml  pytest.ini  requirements.txt
.charts/: Chart.yaml  values.yaml
.charts/templates/: deployment.yaml  secret.yaml  service.yaml
.github/workflows/: azure-webapps-python.yml  cd.yml  ci.yml  python-app.yml
app/: main.py  settings.py
app/categories/: categories_dict.json
app/helpers/: logger.py
app/routers/users/: schema.py  tests.py  users.py  utils.py
charts-main/: CODEOWNERS  Chart.yaml  values.yaml
charts-main/templates/: deployment.yaml  flower.deployment.yaml  secret.yaml  service.yaml  vService.yaml  worker.deployment.yaml  worker.secret.yaml
postman/: hs-ml-assistant.postman_collection.json  hs-ml-env.postman_environment.json
